--- a/css/creative.css
+++ b/css/creative.css
@@ -53,7 +53,7 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #f05f40;
+  color: #FFF;
 }
 a:hover,
 a:focus {
