--- a/css/custom.css
+++ b/css/custom.css
@@ -148,14 +148,16 @@ a.link-inscricao:hover{
   border-radius: 4px;
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
+  box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
 
 .button-link:hover {
-  background-color: #c7c6c6;
+  background-color: #adabab;
   color: rgb(54, 54, 54);
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .img-link {
@@ -168,4 +170,14 @@ a.link-inscricao:hover{
 .img-link:hover {
   opacity: 0.7;
   transition: .5s ease;
+}
+
+.section-about {
+  height: 100%;
+}
+
+@media (max-width: 600px) {
+  .section-about {
+    height: 120%;
+  }
 }
