--- a/css/creative.css
+++ b/css/creative.css
@@ -148,7 +148,7 @@ aside {
   transition: all 0.35s;
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: white;
+  color: #777;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -215,7 +215,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a,
   .navbar-default.affix .nav > li > a:focus {
-    color: rgb(255, 255, 255);
+    color: rgb(91, 124, 190);
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
@@ -555,8 +555,10 @@ body {
 .agenda .agenda-events .agenda-event {     
 } 
 
-@media (max-width: 767px) {
-    
+@media (max-width: 600px) {
+  .navbar{
+    padding-left: 10px
+  }
 }
 
 .team-member{margin-bottom:50px;text-align:center}.team-member img{width:225px;height:225px;border:7px solid #fff}.team-member h4{font-size: 23px; font-weight: bold; margin-top:25px;margin-bottom:0;text-transform:none}.team-member p{margin-top:0}
